--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Register/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Register/Index.cshtml
@@ -73,7 +73,7 @@
 
     <script>
         $(function () {
-            $('#address-details').addClass('disabled');
+            $('#address-details').addClass('sfa-disabled');
             $('input[id=EmailAddress]').usernameLookup('@Url.RouteUrl(RouteNames.CheckUsername)');
         });
 
