--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Index.cshtml
@@ -70,12 +70,12 @@
                
                 <div class="form-group tabbed-element searchtab @keywordTabControlClass @categoriesTabClass @elementControlClass">
                     <label for="loc-within" class="form-label-bold">Within</label>
-                    @Html.DropDownListFor(m => m.WithinDistance, Model.Distances, new { @id = "loc-within", @name = "WithinDistance", @class = "form-control" })
+                    @Html.DropDownListFor(m => m.WithinDistance, Model.Distances, new { @id = "loc-within", @name = "WithinDistance", @class = "form-control form-control-auto" })
                 </div>
 
                 <div class="form-group tabbed-element searchtab @keywordTabControlClass @categoriesTabClass @elementControlClass">
                     <label for="apprenticeship-level" class="form-label-bold">Apprenticeship level</label>
-                    @Html.DropDownListFor(m => m.ApprenticeshipLevel, Model.ApprenticeshipLevels, new { @id = "apprenticeship-level", @name = "ApprenticeshipLevel", @class = "form-control" })
+                    @Html.DropDownListFor(m => m.ApprenticeshipLevel, Model.ApprenticeshipLevels, new { @id = "apprenticeship-level", @name = "ApprenticeshipLevel", @class = "form-control form-control-auto" })
                 </div>
 
                 <div class="form-group">
