--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_savedSearches.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_savedSearches.cshtml
@@ -9,27 +9,27 @@
 <div id="saved-searches" class="tabbed-element savedsearchtab @divClass">
     @if (Model.SavedSearches != null && Model.SavedSearches.Any())
     {
-
-        <ul id="saved-searches-list" class="list-text list-checkradio">
+        <ul id="saved-searches-list" class="list list-checkradio">
             @foreach (var savedSearch in Model.SavedSearches)
             {
                 <li>
-                    <input type="radio" name="SavedSearchId" id="saved-search-@savedSearch.Id" value="@savedSearch.Id">
-                    <div>
-                        <label id="saved-search-label-@savedSearch.Id" for="saved-search-@savedSearch.Id">@savedSearch.Name</label>
-                        @if (savedSearch.DateProcessed.HasValue)
-                        {
-                            <span class="inl-block font-xsmall">(New matches: @savedSearch.DateProcessed.Value.ToFriendlyDaysAgo())</span>
-                        }
-                    </div>
-                    
+                    <label id="saved-search-label-@savedSearch.Id" for="saved-search-@savedSearch.Id" class="form-radio sfa-form-radio">
+                        <input type="radio" name="SavedSearchId" id="saved-search-@savedSearch.Id" value="@savedSearch.Id">
+                        @savedSearch.Name
+                    </label>
+                    @if (savedSearch.DateProcessed.HasValue)
+                    {
+                        <span class="inl-block font-xsmall">(New matches: @savedSearch.DateProcessed.Value.ToFriendlyDaysAgo())</span>
+                    }
+
+
                     @if (savedSearch.ApprenticeshipLevel != "All")
                     {
                         <p class="font-xsmall sfa-no-bottom-margin">
                             <b>Apprenticeship level:</b> <span id="saved-search-apprenticeship-level-@savedSearch.Id">@savedSearch.ApprenticeshipLevel</span>
                         </p>
                     }
-                    
+
                     @if (!string.IsNullOrWhiteSpace(savedSearch.SubCategoriesFullNames))
                     {
                         <p class="font-xsmall sfa-no-bottom-margin">
